--- a/app/src/main/res/layout/fragment_entrega_nova.xml
+++ b/app/src/main/res/layout/fragment_entrega_nova.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        tools:context=".adm.ui.entregas.EntregaNovaFragment">
+        tools:context=".view.adm.ui.entregas.EntregaNovaFragment">
 
         <GridLayout
             android:layout_width="match_parent"
