--- a/app/src/main/res/layout/fragment_entregas_lista.xml
+++ b/app/src/main/res/layout/fragment_entregas_lista.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adm.ui.entregas.EntregasListaFragment">
+    tools:context=".view.adm.ui.entregas.EntregasListaFragment">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
