--- a/app/src/main/res/layout/fragment_motoristas_lista.xml
+++ b/app/src/main/res/layout/fragment_motoristas_lista.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adm.ui.motoristas.MotoristasCadastradosFragment">
+    tools:context=".view.adm.ui.motoristas.MotoristasCadastradosFragment">
 
     <TextView
         android:layout_width="match_parent"
