--- a/app/src/main/res/layout/fragment_produtos_cadastrados.xml
+++ b/app/src/main/res/layout/fragment_produtos_cadastrados.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".adm.ui.estoque.ProdutosCadastradosFragment">
+    tools:context=".view.adm.ui.estoque.ProdutosCadastradosFragment">
 
     <TextView
         android:layout_width="match_parent"
