--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -7,37 +7,37 @@
 
     <fragment
         android:id="@+id/nav_entregas"
-        android:name="com.gutotech.tcclogistica.adm.ui.entregas.EntregasFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.entregas.EntregasFragment"
         android:label="@string/entregas"
         tools:layout="@layout/fragment_entregas" />
 
     <fragment
         android:id="@+id/nav_estoque"
-        android:name="com.gutotech.tcclogistica.adm.ui.estoque.EstoqueFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.estoque.EstoqueFragment"
         android:label="@string/estoque"
         tools:layout="@layout/fragment_estoque" />
 
     <fragment
         android:id="@+id/nav_clientes"
-        android:name="com.gutotech.tcclogistica.adm.ui.clientes.ClientesFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.clientes.ClientesFragment"
         android:label="@string/clientes"
         tools:layout="@layout/fragment_clientes" />
 
     <fragment
         android:id="@+id/nav_motoristas"
-        android:name="com.gutotech.tcclogistica.adm.ui.motoristas.MotoristasFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.motoristas.MotoristasFragment"
         android:label="@string/motoristas"
         tools:layout="@layout/fragment_motoristas" />
 
     <fragment
         android:id="@+id/nav_share"
-        android:name="com.gutotech.tcclogistica.adm.ui.share.ShareFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.share.ShareFragment"
         android:label="@string/menu_share"
         tools:layout="@layout/fragment_share" />
 
     <fragment
         android:id="@+id/nav_send"
-        android:name="com.gutotech.tcclogistica.adm.ui.send.SendFragment"
+        android:name="com.gutotech.tcclogistica.view.adm.ui.send.SendFragment"
         android:label="@string/menu_send"
         tools:layout="@layout/fragment_send" />
 </navigation>
